--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "projectx",
+  "name": "ip-url-checker",
   "version": "1.0.0",
+  "description": "Check the reputation of IPs and URLs using AbuseIPDB and VirusTotal",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node backend/server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "express": "^4.21.2",
-    "node-fetch": "^2.7.0"
-  }
+    "body-parser": "^1.19.0",
+    "express": "^4.18.2",
+    "node-fetch": "^3.2.0"
+  },
+  "author": "Your Name",
+  "license": "MIT"
 }
